@@ -27,8 +27,10 @@
  */
 package org.hisp.dhis.tracker.imports.converter;
 
+import static org.hisp.dhis.user.CurrentUserUtil.getCurrentUserDetails;
+
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 import org.hisp.dhis.note.Note;
 import org.hisp.dhis.tracker.imports.domain.User;
 import org.hisp.dhis.tracker.imports.preheat.TrackerPreheat;
@@ -39,6 +41,7 @@ import org.springframework.stereotype.Service;
  * @author Luciano Fiandesio
  */
 @Service
+@RequiredArgsConstructor
 public class NotesConverterService
     implements TrackerConverterService<org.hisp.dhis.tracker.imports.domain.Note, Note> {
   @Override
@@ -61,7 +64,7 @@ public class NotesConverterService
 
   @Override
   public List<org.hisp.dhis.tracker.imports.domain.Note> to(List<Note> notes) {
-    return notes.stream().map(this::to).collect(Collectors.toList());
+    return notes.stream().map(this::to).toList();
   }
 
   @Override
@@ -71,7 +74,8 @@ public class NotesConverterService
     trackerNote.setAutoFields();
     trackerNote.setNoteText(note.getValue());
 
-    trackerNote.setLastUpdatedBy(preheat.getUser());
+    trackerNote.setLastUpdatedBy(
+        preheat.getUserByUid(getCurrentUserDetails().getUid()).orElse(null));
     trackerNote.setCreator(note.getStoredBy());
     return trackerNote;
   }
@@ -79,6 +83,6 @@ public class NotesConverterService
   @Override
   public List<Note> from(
       TrackerPreheat preheat, List<org.hisp.dhis.tracker.imports.domain.Note> notes) {
-    return notes.stream().map(n -> from(preheat, n)).collect(Collectors.toList());
+    return notes.stream().map(n -> from(preheat, n)).toList();
   }
 }
